--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
       crossorigin="anonymous"
     />
 
+    <!-- Google font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+
     <title>Dar's Portfolio Site</title>
   </head>
   <body>
